# fastapi_crud

./: pyproject.toml
api/: main.py
